--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   	<link rel="stylesheet" href="./animate.min.css" />
 	<link rel="stylesheet" type="text/css" href="app.css" />
 	<link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">
+	<title>YWC</title>
 </head>
 <body>
 
