--- a/onefile/index.html
+++ b/onefile/index.html
@@ -10,61 +10,52 @@
   	<link rel="stylesheet" href="./animate.min.css" />
 	<!--<link rel="stylesheet" type="text/css" href="app.css" />-->
 	<style>
-		body
-		{
+		body{
 			margin: 0;
 			padding: 0;
 			font-family: 'Itim','Berlinsans';
 		}
 
-		#div_app
-		{
+		#div_app{
 			position: relative;
 			margin: 0 auto 0 auto;
 			background-color: rgb(245, 248, 249);
 		}
 
-		#div_young
-		{
+		#div_young{
 			visibility: hidden;
 			position: absolute;
 			font-size: 120px;
 			transition: transform linear 0.2s;
 		}
 
-		#div_young:hover
-		{
+		#div_young:hover{
 			font-weight: bolder;
 		}
 
-		#div_webmaster
-		{
+		#div_webmaster{
 			visibility: hidden;
 			position: absolute;
 			font-size: 120px;
 			transition: transform linear 0.2s;
 		}
 
-		#div_webmaster:hover
-		{
+		#div_webmaster:hover{
 			font-weight: bolder;
 		}
 
-		#div_camp
-		{
+		#div_camp{
 			visibility: hidden;
 			position: absolute;
 			font-size: 120px;
 			transition: transform linear 0.2s;
 		}
 
-		#div_camp:hover
-		{
+		#div_camp:hover{
 			font-weight: bolder;
 		}
 
-		.rgb
-		{
+		.rgb{
 		  color: #f35626;
 		  background-image: -webkit-linear-gradient(-75deg,rgba(255,0,0,0.1),rgba(255,0,0,1));
 		  -webkit-background-clip: text;
@@ -72,15 +63,12 @@
 		  -webkit-animation: hue 5s infinite linear;
 		}
 
-		@-webkit-keyframes hue
-		{
-		  from
-		  {
+		@-webkit-keyframes hue{
+		  from{
 		    -webkit-filter: hue-rotate(0deg);
 		  }
 
-		  to
-		  {
+		  to{
 		    -webkit-filter: hue-rotate(-360deg);
 		  }
 		}
@@ -102,8 +90,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script type="text/javascript" src="app.js"></script>-->
 	<script>
-		function startAnimationText(div, text/*, manage*/,next)
-		{
+		function startAnimationText(div, text/*, manage*/,next){
 			var step = $(div).width() / text.length;
 
 			$(div).offset({
