--- a/onefile/index.html
+++ b/onefile/index.html
@@ -164,8 +164,8 @@
 			});
 
 			$("#div_app")
-				.height($(window).innerHeight())
-				.width($(window).innerWidth());
+				.height($(window).outerHeight())
+				.width($(window).outerWidth());
 
 				manageLayout();
 
